infra/ingress/ip-whitelist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-whitelist
  namespace: euroscale
spec:
  ipWhiteList:
    sourceRange:
      - 2.84.193.24/32
